[project]
name = "funimage"
version = "1.0.13"
description = "funimage"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [ "funfake>=1.0.3", "funutil>=1.0.14", "pillow-avif-plugin>=1.4.6", "pillow",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funimage"
Releases = "https://github.com/farfarfun/funimage/releases"

[tool.setuptools]
license-files = []
